// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gitt at button skal vises > Når button rendres > Så vises button 1`] = `
<div>
  <button
    class="button-wrapper"
    data-analyticsid="button"
    type="button"
  >
    <span
      class="button button--normal"
    >
      <span
        class="button__text"
      >
        <span>
          Button
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`Gitt at button skal vises > Når button rendres kun med ikon > Så inneholder knappen bare ikon, og ariaLabel kan leses 1`] = `
<div>
  <button
    class="button-wrapper"
    data-analyticsid="button"
    type="button"
  >
    <span
      class="button button--normal button--only-icon"
    >
      <svg
        aria-hidden="true"
        class="hnds-style-icon"
        data-analyticsid="icon"
        fill="white"
        focusable="false"
        height="38"
        role="presentation"
        style="min-width: 38px; min-height: 38px;"
        viewBox="0 0 48 48"
        width="38"
      >
        <path
          d="M22.504 31.578l-9.781-10.162 1.822-1.752 7.959 8.269 14.265-14.819 1.821 1.752z"
        />
      </svg>
      <span
        class="button__text"
      >
        <span>
          Check me
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`Gitt at button skal vises > Når button rendres med ikoner > Så vises ikonene 1`] = `
<div>
  <button
    class="button-wrapper"
    data-analyticsid="button"
    type="button"
  >
    <span
      class="button button--normal button--left-icon button--right-icon button--both-icons"
    >
      <svg
        aria-hidden="true"
        class="hnds-style-icon button__left-icon"
        data-analyticsid="icon"
        fill="white"
        focusable="false"
        height="38"
        role="presentation"
        style="min-width: 38px; min-height: 38px;"
        viewBox="0 0 48 48"
        width="38"
      >
        <path
          d="M22.504 31.578l-9.781-10.162 1.822-1.752 7.959 8.269 14.265-14.819 1.821 1.752z"
        />
      </svg>
      <span
        class="button__text"
      >
        <span>
          Button
        </span>
      </span>
      <svg
        aria-hidden="true"
        class="hnds-style-icon button__right-icon"
        data-analyticsid="icon"
        fill="white"
        focusable="false"
        height="38"
        role="presentation"
        style="min-width: 38px; min-height: 38px;"
        viewBox="0 0 48 48"
        width="38"
      >
        <path
          d="M22.504 31.578l-9.781-10.162 1.822-1.752 7.959 8.269 14.265-14.819 1.821 1.752z"
        />
      </svg>
    </span>
  </button>
</div>
`;
